--- a/src/main/resources/static/css/StudyRoom.css
+++ b/src/main/resources/static/css/StudyRoom.css
@@ -1,114 +1,143 @@
-.titleAreaCss {
-    border: 2px solid black;
-    height: 1.5%;
-    margin-bottom: 0.1%;
+*{
+    font-family: 'NanumSquareNeo';
+}
+body{
+    width: 100%;
+    height: 100%;
+}
+.roomInfo {
+    height: 3%;
+    margin: 5px 0px;
+    border-radius: 5px;
+    background: #777777;
+    display: flex;
+    align-items: center;
+}
+.roomInfo b{
+    margin: 0px 10px;
 }
 
-.topAreaCss {
+.container{
+    width: 100%;
+    height: 95%;
+}
+
+.topNav {
     display: flex;
-    justify-content: space-between;
     height: 10%;
-    margin-bottom: 0.5%;
+    margin: 5px 0px;
+    border-radius: 5px;
 }
 
-.participantAreaCss {
+.topLeftMember {
     display: flex;
-    border: 2px solid black;
+    border-radius: 5px;
+    background: #ececec;
     box-sizing: border-box;
     width: 80%;
+    height: 100%;
 }
 
-.participantCss {
+.participant {
     display: flex;
-    justify-content: space-between;
-    border: 1px solid black;
+    align-items: center;
     box-sizing: border-box;
+    background: #9f9d9d;
     width: 10%;
-    height: 100%;
-}
-
-.participantImageCss {
-    width: 50%;
-    height:100%;
-}
-
-.participantNicknameAreaCss {
-    display: flex;
-    flex-direction: column;
-    width: 50%;
-    height: 100%;
-}
-
-.participantNicknameCss {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    height: 50%;
-    justify-content: flex-start;
-}
-
-.participantMasterCss {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    height: 50%;
-    justify-content: flex-end;
-    color: red;
-}
-
-.menuBarAreaCss {
-    border: 2px solid black;
-    box-sizing: border-box;
-    width: 19.5%;
-}
-
-.menuBarExitBtnCss {
-    width: 25%;
-    height: 100%;
-}
-
-.middleAreaCss {
-    display: flex;
-    justify-content: space-between;
     height: 80%;
+    background-color: #9f9d9d;
+    border-radius: 10px;
+    margin: 10px;
 }
 
-.metaCanvasCss {
+.participantImg {
+    width: 45%;
+    height: 75%;
+    border-radius: 50%;
+    margin: 10px;
+}
+
+.participantInfo {
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    height: 100%;
+}
+.participantInfo b {
+    width: 100%;
+    height: 40%;
+    padding-left: 5px;
+}
+.participantNickname {
+    padding-top: 10px;
+}
+.participantMaster {
+    color: #d14141;
+    margin-left: 3px;
+    font-size: 13px;
+}
+
+.topRightMenu {
+    border-radius: 5px;
+    background: #ececec;
+    box-sizing: border-box;
+    width: 19%;
+    margin-left: 5px;
+    height: 100%;
+}
+
+.menuBarExitBtn {
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    background-color: #87AF6E;
+    border: none;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+
+
+.middleMeta {
+    display: flex;
+    height: 80%;
+    margin: 5px 0px;
+}
+
+.metaCanvas {
     border: 2px solid black;
     box-sizing: border-box;
     width: 80%;
+    border-radius: 5px;
 }
 
-.detailProfileAndChatAreaCss {
-    width: 19.5%;
-    margin-left: 0.5%
+.detailProfileAndChatArea {
+    width: 19%;
+    margin-left: 5px;
 }
 
-.detailProfileAndChatCss {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    height: 100%;
-}
-
-.detailProfileAreaCss {
+.detailProfile {
     display: none;
-    border: 2px solid black;
-    box-sizing: border-box;
     width: 100%;
     height: 25%;
     margin-bottom: 2.5%;
-    background: white;
+    border-radius: 5px;
+    background: #ececec;
 }
 
-.detailProfileCloseBtnCss {
-    border: 1px solid black;
+.detailProfileCloseBtn {
+    width: 10%;
+    height: 10%;
+    text-align: center;
+    background-color: #9f9d9d;
     box-sizing: border-box;
     cursor: pointer;
     float: right;
+    border-radius: 10px;
+    margin: 5px;
 }
 
-.detailProfileImageAreaCss {
+.detailProfileImageArea {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -116,84 +145,94 @@
     width: 100%;
 }
 
-.detailProfileImageCss {
+.detailProfileImage {
     max-height: 100%;
     max-width: 100%;
+    border-radius: 50%;
 }
 
-.detailProfileNicknameAreaCss {
+.detailProfileNicknameArea {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     height: 30%;
     width: 100%;
 }
 
-.chatAreaCss {
-    border: 2px solid black;
-    box-sizing: border-box;
+
+.chatArea {
+    border-radius: 5px;
+    background: #ececec;
     width: 100%;
-    height: 100%;
+    height: 98.5%;
     overflow-y: scroll;
+    padding: 5px;
 }
 
-.chatTitleCss {
+.chatTitle {
     text-align: center;
+    font-weight: bold;
+    font-size: 20px;
+    margin: 10px 0px;
 }
 
-.bottomAreaCss {
+
+
+.bottomArea {
     display: flex;
-    justify-content: space-between;
     height: 5%;
-    margin-top: 0.5%;
+    margin: 5px 0px;
 }
 
-.recordAreaCss {
-    border: 2px solid black;
+.recordArea {
     box-sizing: border-box;
     width: 80%;
+    height: 80%
+    background: #ececec;
+    border-radius: 5px;
+    margin: 5px;
+    display: flex;
 }
 
-.recordCss {
+.recordPlayer {
     width: 70%;
     height: 100%;
     float: left;
+    border-radius: 10px;
+    display: flex;
 }
 
-.recordSendBtnCss {
+.recordBtn {
     width: 10%;
     height: 100%;
     float: right;
+    border-radius: 10px;
+    background-color: #87AF6E;
+    border: none;
+    margin: 0px 5px;
 }
 
-.recordStopBtnCss {
-    width: 10%;
-    height: 100%;
-    float: right;
-}
-
-.recordStartBtnCss {
-    width: 10%;
-    height: 100%;
-    float: right;
-}
-
-.messageAreaCss {
-    border: 2px solid black;
+.messageArea {
     box-sizing: border-box;
     width: 19.5%;
-    display:flex;
-    justify-content: space-between;
+    display: flex;
+    margin: 5px 0px;
 }
 
-.messageCss {
+.message {
     border: none;
     width: 70%;
     height: 96.5%;
+    background: #ececec;
+    border-radius: 10px;
+    margin-right: 5px;
 }
 
-.messageSendBtnCss {
+.messageSendBtn {
     width: 25%;
     height: 100%;
+    background-color: #87AF6E;
+    border-radius: 10px;
+    border: none;
 }
