--- a/src/main/resources/static/css/createRoom.css
+++ b/src/main/resources/static/css/createRoom.css
@@ -11,7 +11,7 @@ a{
  }
 
 .container{
-    width: 95%;
+    width: 100%;
     height: 100%;
 }
 .title{
@@ -29,53 +29,54 @@ a{
 }
 
 
-.createFormDiv{
-    width: 95%;
-    height: 85%;
-}
 .createForm{
-    width: 100%;
-    height: 100%;
-    margin: 10px;
+    width: 590px;
+    height: 480px;
     border-radius: 10px;
     background: #ececec;
 }
 .RoomForm{
-    width: 100%;
-    height: 23%;
+    width: 400px;
+    height: 100px;
     padding: 10px;
     box-sizing: border-box;
 }
 .RoomForm p{
-    height: 15%;
-    width: 100%
+    margin: 10px 0px;
     font-size: 15px;
     font-weight: bold;
 }
 .RoomForm input{
-    width: 75%;
-    height: 50%;
+    width: 550px;
+    height: 40px;
     border: 1px solid #87AF6E;
     box-sizing: border-box;
+    font-size: 15px;
+    border-radius: 10px;
 }
 .RoomForm select{
-    width: 75%;
-    height: 50%;
+    width: 550px;
+    height: 40px;
+    font-size: 15px;
     border: 1px solid #87AF6E;
+    border-radius: 8px;
 }
 .submitBtn{
     width: 100%;
-    height: 15%;
+    height: 50px;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
-    margin: 10px 0px;
+    margin: 8px 0px;
 }
 .submitBtn input{
+    width: 100px;
+    height: 40px;
     font-size: 15px;
     font-weight: bold;
     border-radius: 8px;
     margin: 0px 10px;
     background-color: #87AF6E;
     cursor: pointer;
+    border: 1px solid #87AF6E;
 }
